[package]
name = "voidstranger_gba"
version = "0.1.0"
authors = [""]
edition = "2021"
build = "src/build.rs"

[dependencies]
agb = "0.16.0"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indoc = "2.0.4"
heck = "0.4"

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
lto = "fat"
debug = true
